# nixplorer

./: CHANGELOG.md  README.md  default.nix  nixplorer.cabal  shell.nix
app/: Main.hs
src/: Nixplorer.hs
src/Nix/: Derivation.hs  StorePath.hs
src/Nixplorer/: Config.hs  Prelude.hs
src/Nixplorer/Widget/: Derivation.hs
test/: Main.hs
